# physicsml

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  init_conda_venv.sh  init_python_venv.sh  noxfile.py  openmm_env.yaml  pyproject.toml
.github/workflows/: latest-tests.yaml  main-ci-actions.yaml  pinned-tests.yaml  quality-typing-checks.yaml
docs/source/: conf.py  index.md
docs/source/pages/: philosophy.md
docs/source/pages/datasets/: intro.md  qm_datasets.md
docs/source/pages/features/: how_to_add_reps.md  intro.md
docs/source/pages/models/: allegro.md  ani.md  egnn.md  how_to_add_models.md  intro.md  mace.md  nequip.md  tensor_net.md
docs/source/pages/molflux/: intro.md
docs/source/pages/philosophy/: molflux.md  philosophy.md
docs/source/pages/plugins/: .gitignore  ase.md  openmm.md
docs/source/pages/structure/: lightning_layer.md  molflux_layer.md  physicsml_structure.md  torch_layer.md  transfer_learning.md
docs/source/pages/tutorials/: .gitignore  ani1x_energy_forces_training.md  ani1x_truncated.parquet  gdb9_training.md  gdb9_uncertainty.md  transfer_learning.md
pinned-versions/3.10/: lockfile.ase.txt  lockfile.core.txt  lockfile.openeye.txt  lockfile.openmm.txt  lockfile.rdkit.txt
pinned-versions/3.11/: lockfile.ase.txt  lockfile.core.txt  lockfile.openeye.txt  lockfile.openmm.txt  lockfile.rdkit.txt
pinned-versions/3.8/: lockfile.ase.txt  lockfile.core.txt  lockfile.openeye.txt  lockfile.openmm.txt  lockfile.rdkit.txt
pinned-versions/3.9/: lockfile.ase.txt  lockfile.core.txt  lockfile.openeye.txt  lockfile.openmm.txt  lockfile.rdkit.txt
src/physicsml/: __init__.py  utils.py
src/physicsml/backends/: backend_selector.py  openeye_backend.py  rdkit_backend.py
src/physicsml/featurisation/physicsml_features/: atom_features.py  bond_features.py  physicsml_features.py
src/physicsml/lightning/: config.py  datamodule.py  model.py  model_uncertainty.py  module.py  pre_batching_in_memory.py  pre_batching_on_disk.py
src/physicsml/lightning/graph_datasets/: graph_dataset.py  neighbourhood_list_torch.py
src/physicsml/lightning/graph_datasets/torch_nl_vendored/: geometry.py  linked_cell.py  naive_impl.py  neighbor_list.py  timer.py  utils.py
src/physicsml/lightning/losses/: __init__.py  barlow_twins_loss.py  construct_loss.py  loss_base.py  masked_mse_loss.py  multitask_losses.py  serial_bce_w_logits_loss.py  stock_losses.py  weighted_mse_loss.py
src/physicsml/models/: prism.py  utils.py
src/physicsml/models/allegro/: allegro_prism.py
src/physicsml/models/allegro/mean_var/: default_configs.py  mean_var_allegro_model.py  mean_var_allegro_module.py
src/physicsml/models/allegro/modules/: allegro.py  channels.py  contract.py  cutoffs.py  fc.py  layout.py  linear.py  radial.py  spmm.py
src/physicsml/models/allegro/supervised/: allegro_model.py  allegro_module.py  default_configs.py
src/physicsml/models/ani/: ani_1_2_defaults.py  ani_datamodule.py  ani_dataset.py  ani_prism.py  config.py
src/physicsml/models/ani/ensemble/: default_configs.py  ensemble_ani_model.py  ensemble_ani_module.py
src/physicsml/models/ani/mean_var/: default_configs.py  mean_var_ani_model.py  mean_var_ani_module.py
src/physicsml/models/ani/modules/: aev.py
src/physicsml/models/ani/supervised/: ani_model.py  ani_module.py  default_configs.py
src/physicsml/models/egnn/: egnn_prism.py  egnn_utils.py
src/physicsml/models/egnn/adapter/: adapter_egnn_model.py  adapter_egnn_module.py  adapter_egnn_utils.py  default_configs.py
src/physicsml/models/egnn/mean_var/: default_configs.py  mean_var_egnn_model.py  mean_var_egnn_module.py
src/physicsml/models/egnn/multi_graph/: default_configs.py  multi_graph_dataloader.py  multi_graph_datamodule.py  multi_graph_dataset.py  multi_graph_egnn_model.py  multi_graph_egnn_module.py  utils.py
src/physicsml/models/egnn/ssf/: default_configs.py  ssf_egnn_model.py  ssf_egnn_module.py  ssf_egnn_utils.py
src/physicsml/models/egnn/supervised/: default_configs.py  egnn_model.py  egnn_module.py
src/physicsml/models/mace/: mace_prism.py
src/physicsml/models/mace/adapter/: adapter_mace_model.py  adapter_mace_module.py  adapter_mace_utils.py  default_configs.py
src/physicsml/models/mace/mean_var/: default_configs.py  mean_var_mace_model.py  mean_var_mace_module.py
src/physicsml/models/mace/modules/: _activation.py  blocks.py  cg.py  irreps_tools.py  mace.py
src/physicsml/models/mace/ssf/: default_configs.py  ssf_mace_model.py  ssf_mace_module.py  ssf_mace_utils.py
src/physicsml/models/mace/supervised/: default_configs.py  mace_model.py  (+1 more)
src/physicsml/models/nequip/: nequip_prism.py
src/physicsml/plugins/ase/: ase_ani.py  ase_graph.py  calculator.py  load.py
src/physicsml/plugins/openmm/: load.py  mlpotential.py  openmm_ani.py  openmm_base.py  openmm_graph.py  physicsml_potential.py
tests/ase/: conftest.py  test_ase_ani.py  test_ase_graph.py
tests/data/: ani1x.h5  gdb9.csv  gdb9.sdf
tests/data/ani_model/: model_config.json
tests/data/ani_model/model_artefacts/: module_checkpoint.ckpt
tests/data/egnn_model/: featurisation_metadata.json  model_config.json  requirements.txt
tests/data/egnn_model/model_artefacts/: module_checkpoint.ckpt
tests/data/mace_model/: featurisation_metadata.json  model_config.json
tests/data/mace_model/model_artefacts/: module_checkpoint.ckpt
tests/data/nequip_model/: model_config.json
tests/data/nequip_model/model_artefacts/: module_checkpoint.ckpt
tests/openeye/: conftest.py
tests/openeye/core/data/: test_datamodule.py  test_graph_dataset.py
tests/openeye/core/featurisation/: test_physicsml_featurisation.py
tests/openmm/: conftest.py  test_openmm_ani.py  test_openmm_egnn.py  test_openmm_mace.py  test_openmm_nequip.py  test_openmm_nnp_potential.py
tests/rdkit/: conftest.py
tests/rdkit/core/data/: test_datamodule.py  test_graph_dataset.py
tests/rdkit/core/featurisation/: test_physicsml_featurisation.py
tests/rdkit/integration/prism/: test_allegro_prism.py  test_ani_prism.py  test_egnn_prism.py  test_mace_prism.py  test_nequip_prism.py
(+65 files in other folders)
